# rusty_procedure_call

./: .gitignore  Cargo.toml  LICENSE.md  flake.nix  readme.md
crates/rpc_derive/: Cargo.toml
crates/rpc_derive/src/: lib.rs  non_persistent.rs  persistent.rs  persistent_message.rs  persistent_struct.rs
src/: error.rs  lib.rs  main.rs
src/tests/: example.rs  mod.rs  sum_ports.rs  unused_test.rs
