workspace = { members = ["crates/rpc_derive"] }
[package]
name = "rusty_procedure_call"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]        
thiserror = "1.0.*"
postcard = { version = "1.0.*", features = ["alloc"] }
rpc_derive = { path = "crates/rpc_derive" }

[dev-dependencies]
serial_test = "2.0.0"
tokio = { version = "1.35.*", features = ["rt", "tokio-macros", "macros", "net", "io-util", "time"] }
serde = { version = "1.0.*", features = ["derive"] }
